src/Zapisywarka.WEB/deployment/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web
spec:
  rules:
    - host: zapisywarka.local
      http:
        paths:
          - pathType: Prefix
            path: '/'
            backend:
              service:
                name: web
                port:
                  number: 80
